==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

WIP:
. (kfsone) Improved the feedback from run when routes go wrong.
. (kfsone) fixed "--link-ly" causing a 'TypeError' in various places,
. (kfsone) "nav" now supports "--via"; destinations are processed in-order.
. (kfsone) buy, sell, nav and local now have consistent presentation
  of each station's distance from the star, labelled "StnLs", while
  interstellar distances are labelled "DistLy".
. (OpenSS) Added 'quick update' to scripts/trade.bat
+ Stations, data, etc: kfsone, gazelle, shirkan

v6.3.1 Dec 28 2014
. (kfsone) Removed '--supply' from "update" completely,
. (kfsone) Improved the "--ls-penalty" from a flat line to a curve,
   so really, stupidly, ridiculously distant stations (looking at you,
   Alpha centauri) really have to be mind-blowing to show up.
. (kfsone) "run" command output shows score of routes,
. (kfsone) "misc/add-station" now has a "-u" option for updates,
. (kfsone) "misc/add-station" no-longer writes to the csv file
   (after adding stations do: trade.py export --table Station)
. (kfsone) Fixed #111 import not rebuilding cache
. (kfsone) "maddavo" plugin is now much smarter
   - will try to download a smaller prices file,
   - will check the first line of the file to see if it's an update
     before downloading the whole thing :)
. (kfsone) You can now use "--opt=help" to get help for plugins, e.g.
   trade.py import --plugin=maddavo --opt=help
. (kfsone) Added "--ls-penalty" ("--lsp") for biasing "run" calculations
   in favor of shorter supercruise times.
+ Stations, Systems, data: kfsone, maddavo, gazelle, shirkan

v6.3.0 Dec 23 2014
. (OpenSS) Script for Windows users (see scripts/README.txt)!
. (kfsone) Added support for pad sizes at stations,