@@ -3,6 +3,7 @@ TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 ==============================================================================
 
 WIP:
+. (kfsone) Added experimental "upload-to-maddavo" (misc/madupload.py)
 . (kfsone) Improved the feedback from run when routes go wrong.
 . (kfsone) fixed "--link-ly" causing a 'TypeError' in various places,
 . (kfsone) "nav" now supports "--via"; destinations are processed in-order.
